<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    android:columnCount="3"
    android:rowCount="4"
    android:id="@+id/num_pad"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/PadLayoutStyle"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/digit_7"
        style="@style/PadButtonStyle.Num"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/digit_7" />

    <Button
        android:id="@+id/digit_8"
        style="@style/PadButtonStyle.Num"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/digit_8" />

    <Button
        android:id="@+id/digit_4"
        style="@style/PadButtonStyle.Num"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/digit_4" />

    <Button
        android:id="@+id/digit_5"
        style="@style/PadButtonStyle.Num"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/digit_5" />

    <Button
        android:id="@+id/digit_6"
        style="@style/PadButtonStyle.Num"
        android:layout_row="1"
        android:layout_column="2"
        android:text="@string/digit_6" />

    <Button
        android:id="@+id/digit_2"
        style="@style/PadButtonStyle.Num"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/digit_2" />

    <Button
        android:id="@+id/digit_3"
        style="@style/PadButtonStyle.Num"
        android:layout_row="2"
        android:layout_column="2"
        android:text="@string/digit_3" />

    <Button
        android:id="@+id/digit_point"
        style="@style/PadButtonStyle.Num"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/digit_point" />

    <ImageButton
        android:id="@+id/op_del"
        style="@style/PadButtonStyle.Num"
        android:layout_row="3"
        android:layout_column="2"
        android:tint="?colorControlNormal"
        android:src="@drawable/ic_keyboard_backspace_black_24dp"/>

    <Button
        android:id="@+id/digit_1"
        style="@style/PadButtonStyle.Num"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/digit_1" />

    <Button
        android:id="@+id/digit_0"
        style="@style/PadButtonStyle.Num"
        android:layout_row="3"
        android:layout_column="1"
        android:text="@string/digit_0" />

    <Button
        android:id="@+id/digit_9"
        style="@style/PadButtonStyle.Num"
        android:layout_row="0"
        android:layout_column="2"
        android:text="@string/digit_9" />


</GridLayout>
